--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,14 @@
 @import "tailwindcss";
 
 #hero {
-  background-image: url(./banner/men_banner.jpg);
+  background-image: url(../src/assets/banner/men_banner.jpg);
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
 }
 
 #fashion {
-  background-image: url(./fashion/1.jpg);
+  background-image: url(../src/assets/fashion/1.jpg);
   background-attachment: fixed;
   height: 50%;
 }
